# rotrust

./: .gitignore  BYPASS_DEMO.md  CREATE_PR.md  GITHUB_UPLOAD.md  LICENSE  MERGE_PROCESS.md  Makefile  PR_DESCRIPTION.md  PR_INSTRUCTIONS.md  README.md  REVIEW_REQUEST.md  RUNNING.md  SOLUTION_SUMMARY.md  pyproject.toml  requirements-aws.txt  requirements.txt  setup.py
.ebextensions/: 01_environment.config
.github/: BRANCH_PROTECTION_SUMMARY.md  CONTRIBUTING.md  WORKFLOW_GUIDELINES.md
.github/workflows/: branch-protection.yml
backend/: main.py  test_blockchain_models.py
backend/app/: db_init.py
backend/app/blockchain/: __init__.py
backend/app/blockchain/chaincode/: __init__.py  property_chaincode.py
backend/app/blockchain/models/: __init__.py  blockchain_models.py
backend/app/blockchain/services/: __init__.py  blockchain_service.py
backend/app/blockchain/utils/: __init__.py  blockchain_utils.py
backend/app/core/: config.py  database.py  logging_config.py
backend/app/models/: __init__.py  base.py  document.py  property.py  transaction.py  user.py
backend/app/routers/: auth.py  properties.py  transactions.py  users.py
backend/app/services/: auth_service.py  property_service.py  secrets_service.py  storage_service.py  transaction_service.py
backend/tests/: mock_data.py  verify_data.py
blockchain/chaincode/: escrow_contract.js  property_contract.js  transaction_contract.js
blockchain/network/: configtx.yaml  connection-profile.json  crypto-config.yaml  docker-compose.yaml  setup-network.sh
docs/: README.md  api_documentation.md  backend_components.md  blockchain_functionality.md  blockchain_implementation.md  database_models.md  frontend_components.md
frontend/: package-lock.json  package.json
frontend/frontend/: config-overrides.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js  setupProxy.js
frontend/src/components/layouts/: MainLayout.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: HomePage.js  NotFoundPage.js
frontend/src/pages/auth/: LoginPage.js  RegisterPage.js
frontend/src/pages/properties/: PropertyDetailPage.js  PropertyListPage.js
frontend/src/pages/transactions/: TransactionDetailPage.js  TransactionListPage.js
frontend/src/pages/user/: ProfilePage.js
frontend/src/services/api/: authService.js  index.js  propertyService.js  transactionService.js
frontend/src/styles/: index.css
