[tool.poetry]
name = "rotrust"
version = "0.1.0"
description = "A blockchain-based platform for real estate transactions in Romania"
authors = ["RoTrust Team <contact@rotrust.ro>"]
readme = "README.md"
repository = "https://github.com/your-organization/rotrust"
packages = [
    {include = "backend"}
]
keywords = ["blockchain", "real estate", "hyperledger fabric", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
fastapi = "^0.109.0"
uvicorn = "0.23.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-multipart = "0.0.19"
python-jose = {extras = ["cryptography"], version = "3.4.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-dotenv = "1.0.0"
httpx = "0.25.0"
sqlalchemy = "2.0.22"
alembic = "1.12.0"
psycopg2-binary = "2.9.10"
cryptography = "44.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
black = "24.3.0"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"