[tool.poetry]
name = "rotrust"
version = "0.1.0"
description = ""
authors = ["MarianStelianCraciun <122376989+MarianStelianCraciun@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
PyJWT = "^2.10.1"
fastapi = "^0.109.0"
uvicorn = "^0.23.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.19"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.10"
email-validator = "^2.1.0"
bcrypt = "==3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
